--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://yoursudoku.netlify.app" />
     <meta
       property="og:image"
-      content=""
+      content="https://github.com/Vspecs/sudoku-visualizer/blob/main/demo/banner.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
