--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="Sudoku, Sudoku Solutions, Sudoku Solver, Puzzles, Solution" />
     <meta name="theme-color" content="#ff826d" />
-    <meta
-      name="Sudoku"
-      content="A place for all sudoku puzzles and solutions you'll ever need."
-    />
+    <meta property="og:title" content="Your Sudoku" />
+    <meta property="og:description" content="A place for all sudoku puzzles and solutions you'll ever need." />
     <meta property="og:url" content="https://yoursudoku.netlify.app" />
-    <meta
-      property="og:image"
-      content="https://github.com/Vspecs/sudoku-visualizer/blob/main/demo/banner.png"
-    />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Vspecs/sudoku-visualizer/main/demo/banner.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Your Sudoku</title>
