--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <meta property="og:description" content="A place for all sudoku puzzles and solutions you'll ever need." />
     <meta property="og:url" content="https://yoursudoku.netlify.app" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Vspecs/sudoku-visualizer/main/demo/banner.png" />
+    <meta property="og:image:width" content="1500" />
+    <meta property="og:image:height" content="1500" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Your Sudoku</title>
